@@ -42,6 +42,8 @@ import org.apache.lucene.util.BytesRef;
 import org.apache.solr.cloud.ZkController;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
+import org.apache.solr.common.cloud.ClusterState;
+import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.OnReconnect;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.SolrZkClient;
@@ -183,12 +185,12 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
       boolean replicaInRecovery = false;
 
       Map<String, Object> shards = (Map<String, Object>) collectionState.get("shards");
-      for (String shardId : shards.keySet()) {
+      for (Object o : shards.values()) {
         boolean hasActive = false;
-        Map<String, Object> shard = (Map<String, Object>) shards.get(shardId);
+        Map<String, Object> shard = (Map<String, Object>) o;
         Map<String, Object> replicas = (Map<String, Object>) shard.get("replicas");
-        for (String replicaId : replicas.keySet()) {
-          Map<String, Object> replicaState = (Map<String, Object>) replicas.get(replicaId);
+        for (Object value : replicas.values()) {
+          Map<String, Object> replicaState = (Map<String, Object>) value;
           Replica.State coreState = Replica.State.getState((String) replicaState.get(ZkStateReader.STATE_PROP));
           String nodeName = (String) replicaState.get("node_name");
 
@@ -262,7 +264,7 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
     }
 
     /**
-     * Create a merged view of all collections (internal from /clusterstate.json and external from /collections/?/state.json
+     * Create a merged view of all collections from /collections/?/state.json
      */
     private synchronized List<String> getCollections(SolrZkClient zkClient) throws KeeperException, InterruptedException {
       if (cachedCollections == null) {
@@ -283,7 +285,7 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
     /**
      * Gets the requested page of collections after applying filters and offsets.
      */
-    public PageOfCollections fetchPage(PageOfCollections page, SolrZkClient zkClient)
+    public void fetchPage(PageOfCollections page, SolrZkClient zkClient)
         throws KeeperException, InterruptedException {
 
 
@@ -305,8 +307,6 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
       // status until reading all status objects from ZK
       if (page.filterType != FilterType.status)
         page.selectPage(children);
-
-      return page;
     }
 
     @Override
@@ -353,6 +353,7 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
   private PagedCollectionSupport pagingSupport;
 
   @Override
+  @SuppressWarnings({"unchecked"})
   public void handleRequestBody(SolrQueryRequest req, SolrQueryResponse rsp) throws Exception {
     final SolrParams params = req.getParams();
     Map<String, String> map = new HashMap<>(1);
@@ -371,10 +372,9 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
     }
 
     String path = params.get(PATH);
-    String addr = params.get("addr");
 
-    if (addr != null && addr.length() == 0) {
-      addr = null;
+    if (params.get("addr") != null) {
+      throw new SolrException(ErrorCode.BAD_REQUEST, "Illegal parameter \"addr\"");
     }
 
     String detailS = params.get("detail");
@@ -383,7 +383,7 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
     String dumpS = params.get("dump");
     boolean dump = dumpS != null && dumpS.equals("true");
 
-    int start = params.getInt("start", 0);
+    int start = params.getInt("start", 0); // Note start ignored if rows not specified
     int rows = params.getInt("rows", -1);
 
     String filterType = params.get("filterType");
@@ -401,16 +401,23 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
         filter = null;
     }
 
-    ZKPrinter printer = new ZKPrinter(cores.getZkController(), addr);
+    ZKPrinter printer = new ZKPrinter(cores.getZkController());
     printer.detail = detail;
     printer.dump = dump;
     boolean isGraphView = "graph".equals(params.get("view"));
-    printer.page = (isGraphView && "/clusterstate.json".equals(path))
-        ? new PageOfCollections(start, rows, type, filter) : null;
+    // There is no znode /clusterstate.json (removed in Solr 9), but we do as if there's one and return collection listing
+    // Need to change services.js if cleaning up here, collection list is used from Admin UI Cloud - Graph
+    boolean paginateCollections = (isGraphView && "/clusterstate.json".equals(path));
+    printer.page = paginateCollections ? new PageOfCollections(start, rows, type, filter) : null;
     printer.pagingSupport = pagingSupport;
 
     try {
-      printer.print(path);
+      if (paginateCollections) {
+        // List collections and allow pagination, but no specific znode info like when looking at a normal ZK path
+        printer.printPaginatedCollections();
+      } else {
+        printer.print(path);
+      }
     } finally {
       printer.close();
     }
@@ -429,61 +436,23 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
     boolean detail = false;
     boolean dump = false;
 
-    String addr; // the address passed to us
     String keeperAddr; // the address we're connected to
 
-    boolean doClose;  // close the client after done if we opened it
-
     final BAOS baos = new BAOS();
-    final Writer out = new OutputStreamWriter(baos,  StandardCharsets.UTF_8);
+    final Writer out = new OutputStreamWriter(baos, StandardCharsets.UTF_8);
     SolrZkClient zkClient;
-
-    int level;
-    int maxData = 95;
 
     PageOfCollections page;
     PagedCollectionSupport pagingSupport;
     ZkController zkController;
 
-    public ZKPrinter(ZkController controller, String addr) throws IOException {
+    public ZKPrinter(ZkController controller) throws IOException {
       this.zkController = controller;
-      this.addr = addr;
-
-      if (addr == null) {
-        if (controller != null) {
-          // this core is zk enabled
-          keeperAddr = controller.getZkServerAddress();
-          zkClient = controller.getZkClient();
-          if (zkClient != null && zkClient.isConnected()) {
-            return;
-          } else {
-            // try a different client with this address
-            addr = keeperAddr;
-          }
-        }
-      }
-
-      keeperAddr = addr;
-      if (addr == null) {
-        writeError(404, "Zookeeper is not configured for this Solr Core. Please try connecting to an alternate zookeeper address.");
-        return;
-      }
-
-      try {
-        zkClient = new SolrZkClient(addr, 10000);
-        doClose = true;
-      } catch (Exception e) {
-        writeError(503, "Could not connect to zookeeper at '" + addr + "'\"");
-        zkClient = null;
-        return;
-      }
-
+      keeperAddr = controller.getZkServerAddress();
+      zkClient = controller.getZkClient();
     }
 
     public void close() {
-      if (doClose) {
-        zkClient.close();
-      }
       try {
         out.flush();
       } catch (Exception e) {
@@ -491,7 +460,7 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
       }
     }
 
-    // main entry point
+    // main entry point for printing from path
     void print(String path) throws IOException {
       if (zkClient == null) {
         return;
@@ -539,6 +508,78 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
       out.write(chars.toString());
     }
 
+    // main entry point for printing collections
+    @SuppressWarnings("unchecked")
+    void printPaginatedCollections() throws IOException {
+      SortedMap<String, Object> collectionStates;
+      try {
+        // support paging of the collections graph view (in case there are many collections)
+        // fetch the requested page of collections and then retrieve the state for each
+        pagingSupport.fetchPage(page, zkClient);
+        // keep track of how many collections match the filter
+        boolean applyStatusFilter = (page.filterType == FilterType.status && page.filter != null);
+        List<String> matchesStatusFilter = applyStatusFilter ? new ArrayList<>() : null;
+        ClusterState cs = zkController.getZkStateReader().getClusterState();
+        Set<String> liveNodes = applyStatusFilter ? cs.getLiveNodes() : null;
+
+        collectionStates = new TreeMap<>(pagingSupport);
+        for (String collection : page.selected) {
+          DocCollection dc = cs.getCollectionOrNull(collection);
+          if (dc != null) {
+            // TODO: for collections with perReplicaState, a ser/deser to JSON was needed to get the state to render correctly for the UI?
+            @SuppressWarnings("unchecked")
+            Map<String, Object> collectionState = dc.isPerReplicaState() ? (Map<String, Object>)Utils.fromJSONString(Utils.toJSONString(dc)) : dc.getProperties();
+            if (applyStatusFilter) {
+              // verify this collection matches the filtered state
+              if (page.matchesStatusFilter(collectionState, liveNodes)) {
+                matchesStatusFilter.add(collection);
+                collectionStates.put(collection, ClusterStatus.postProcessCollectionJSON(collectionState));
+              }
+            } else {
+              collectionStates.put(collection, ClusterStatus.postProcessCollectionJSON(collectionState));
+            }
+          }
+        }
+
+        if (applyStatusFilter) {
+          // update the paged navigation info after applying the status filter
+          page.selectPage(matchesStatusFilter);
+
+          // rebuild the Map of state data
+          SortedMap<String, Object> map = new TreeMap<String, Object>(pagingSupport);
+          for (String next : page.selected)
+            map.put(next, collectionStates.get(next));
+          collectionStates = map;
+        }
+      } catch (KeeperException | InterruptedException e) {
+        writeError(500, e.toString());
+        return;
+      }
+
+      CharArr chars = new CharArr();
+      JSONWriter json = new JSONWriter(chars, 2);
+      json.startObject();
+
+      json.writeString("znode");
+      json.writeNameSeparator();
+      json.startObject();
+
+      // For some reason, without this the Json is badly formed
+      writeKeyValue(json, PATH, "Undefined", true);
+
+      if (collectionStates != null) {
+        CharArr collectionOut = new CharArr();
+        new JSONWriter(collectionOut, 2).write(collectionStates);
+        writeKeyValue(json, "data", collectionOut.toString(), false);
+      }
+
+      writeKeyValue(json, "paging", page.getPagingHeader(), false);
+
+      json.endObject();
+      json.endObject();
+      out.write(chars.toString());
+    }
+
     void writeError(int code, String msg) throws IOException {
       throw new SolrException(ErrorCode.getErrorCode(code), msg);
       /*response.setStatus(code);
@@ -560,7 +601,6 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
       out.write(chars.toString());*/
     }
 
-
     boolean printTree(JSONWriter json, String path) throws IOException {
       String label = path;
       if (!fullpath) {
@@ -568,18 +608,13 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
         label = idx > 0 ? path.substring(idx + 1) : path;
       }
       json.startObject();
-      //writeKeyValue(json, "data", label, true );
-      json.writeString("data");
-      json.writeNameSeparator();
-
-      json.startObject();
-      writeKeyValue(json, "title", label, true);
+      writeKeyValue(json, "text", label, true);
       json.writeValueSeparator();
-      json.writeString("attr");
+      json.writeString("a_attr");
       json.writeNameSeparator();
       json.startObject();
-      writeKeyValue(json, "href", "admin/zookeeper?detail=true&path=" + URLEncoder.encode(path, "UTF-8"), true);
-      json.endObject();
+      String href = "admin/zookeeper?detail=true&path=" + URLEncoder.encode(path, StandardCharsets.UTF_8);
+      writeKeyValue(json, "href", href, true);
       json.endObject();
 
       Stat stat = new Stat();
@@ -667,7 +702,6 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
       json.write(v);
     }
 
-    @SuppressWarnings("unchecked")
     boolean printZnode(JSONWriter json, String path) throws IOException {
       try {
         String dataStr = null;
@@ -680,95 +714,6 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
             dataStr = (new BytesRef(data)).utf8ToString();
           } catch (Exception e) {
             dataStrErr = "data is not parsable as a utf8 String: " + e.toString();
-          }
-        }
-        // support paging of the collections graph view (in case there are many collections)
-        if (page != null) {
-          // we've already pulled the data for /clusterstate.json from ZooKeeper above,
-          // but it needs to be parsed into a map so we can lookup collection states before
-          // trying to find them in the /collections/?/state.json znode
-          Map<String, Object> clusterstateJsonMap = null;
-          if (dataStr != null) {
-            try {
-              clusterstateJsonMap = (Map<String, Object>) Utils.fromJSONString(dataStr);
-            } catch (Exception e) {
-              throw new SolrException(ErrorCode.SERVER_ERROR,
-                  "Failed to parse /clusterstate.json from ZooKeeper due to: " + e, e);
-            }
-          } else {
-            clusterstateJsonMap = Utils.makeMap();
-          }
-
-          // fetch the requested page of collections and then retrieve the state for each 
-          page = pagingSupport.fetchPage(page, zkClient);
-          // keep track of how many collections match the filter
-          boolean applyStatusFilter =
-              (page.filterType == FilterType.status && page.filter != null);
-          List<String> matchesStatusFilter = applyStatusFilter ? new ArrayList<String>() : null;
-          Set<String> liveNodes = applyStatusFilter ?
-              zkController.getZkStateReader().getClusterState().getLiveNodes() : null;
-
-          SortedMap<String, Object> collectionStates = new TreeMap<String, Object>(pagingSupport);
-          for (String collection : page.selected) {
-            Object collectionState = clusterstateJsonMap.get(collection);
-            if (collectionState != null) {
-              // collection state was in /clusterstate.json
-              if (applyStatusFilter) {
-                // verify this collection matches the status filter
-                if (page.matchesStatusFilter((Map<String, Object>) collectionState, liveNodes)) {
-                  matchesStatusFilter.add(collection);
-                  collectionStates.put(collection, collectionState);
-                }
-              } else {
-                collectionStates.put(collection, collectionState);
-              }
-            } else {
-              // looks like an external collection ...
-              String collStatePath = String.format(Locale.ROOT, "/collections/%s/state.json", collection);
-              String childDataStr = null;
-              try {
-                byte[] childData = zkClient.getData(collStatePath, null, null, true);
-                if (childData != null)
-                  childDataStr = (new BytesRef(childData)).utf8ToString();
-              } catch (KeeperException.NoNodeException nne) {
-                log.warn("State for collection " + collection +
-                    " not found in /clusterstate.json or /collections/" + collection + "/state.json!");
-              } catch (Exception childErr) {
-                log.error("Failed to get " + collStatePath + " due to: " + childErr);
-              }
-
-              if (childDataStr != null) {
-                Map<String, Object> extColl = (Map<String, Object>) Utils.fromJSONString(childDataStr);
-                collectionState = extColl.get(collection);
-
-                if (applyStatusFilter) {
-                  // verify this collection matches the filtered state
-                  if (page.matchesStatusFilter((Map<String, Object>) collectionState, liveNodes)) {
-                    matchesStatusFilter.add(collection);
-                    collectionStates.put(collection, collectionState);
-                  }
-                } else {
-                  collectionStates.put(collection, collectionState);
-                }
-              }
-            }
-          }
-
-          if (applyStatusFilter) {
-            // update the paged navigation info after applying the status filter
-            page.selectPage(matchesStatusFilter);
-
-            // rebuild the Map of state data
-            SortedMap<String, Object> map = new TreeMap<String, Object>(pagingSupport);
-            for (String next : page.selected)
-              map.put(next, collectionStates.get(next));
-            collectionStates = map;
-          }
-
-          if (collectionStates != null) {
-            CharArr out = new CharArr();
-            new JSONWriter(out, 2).write(collectionStates);
-            dataStr = out.toString();
           }
         }
 
