@@ -16,9 +16,6 @@
  */
 package org.apache.solr.common.params;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Locale;
 import java.util.Set;
 
@@ -100,9 +97,6 @@ public interface CommonParams {
   /** default query field */
   String DF = "df";
 
-  /** Transformer param -- used with XSLT */
-  String TR = "tr";
-  
   /** whether to include debug data for all components pieces, including doing explains*/
   String DEBUG_QUERY = "debugQuery";
 
@@ -162,9 +156,30 @@ public interface CommonParams {
   boolean SEGMENT_TERMINATE_EARLY_DEFAULT = false;
 
   /**
-   * Timeout value in milliseconds.  If not set, or the value is &gt;= 0, there is no timeout.
+   * Timeout value in milliseconds.  If not set, or the value is &gt; 0, there is no timeout.
    */
   String TIME_ALLOWED = "timeAllowed";
+
+  /**
+   * Is the query cancellable?
+   */
+  String IS_QUERY_CANCELLABLE = "canCancel";
+
+  /**
+   * Custom query UUID if provided.
+   */
+  String QUERY_UUID = "queryUUID";
+
+  /**
+   * UUID of the task whose status is to be checked
+   */
+  String TASK_CHECK_UUID = "taskUUID";
+
+  /**
+   * The number of hits that need to be counted accurately. If more than {@link #MIN_EXACT_COUNT} documents
+   * match a query, then the value in "numFound" may be an estimate to speedup search.
+   */
+  String MIN_EXACT_COUNT = "minExactCount";
   
   /** 'true' if the header should include the handler name */
   String HEADER_ECHO_HANDLER = "echoHandler";
@@ -185,31 +200,23 @@ public interface CommonParams {
   String ZK_STATUS_PATH = "/admin/zookeeper/status";
   String SYSTEM_INFO_PATH = "/admin/info/system";
   String METRICS_PATH = "/admin/metrics";
-  String METRICS_HISTORY_PATH = "/admin/metrics/history";
-  String AUTOSCALING_PATH = "/admin/autoscaling";
-  String AUTOSCALING_HISTORY_PATH = "/admin/autoscaling/history";
-  String AUTOSCALING_DIAGNOSTICS_PATH = "/admin/autoscaling/diagnostics";
-  String AUTOSCALING_SUGGESTIONS_PATH = "/admin/autoscaling/suggestions";
 
   String STATUS = "status";
 
   String OK = "OK";
   String FAILURE = "FAILURE";
 
-  Set<String> ADMIN_PATHS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+  Set<String> ADMIN_PATHS = Set.of(
       CORES_HANDLER_PATH,
       COLLECTIONS_HANDLER_PATH,
       HEALTH_CHECK_HANDLER_PATH,
       CONFIGSETS_HANDLER_PATH,
       SYSTEM_INFO_PATH,
+      ZK_PATH,
+      ZK_STATUS_PATH,
       AUTHC_PATH,
       AUTHZ_PATH,
-      METRICS_PATH,
-      METRICS_HISTORY_PATH,
-      AUTOSCALING_PATH,
-      AUTOSCALING_HISTORY_PATH,
-      AUTOSCALING_DIAGNOSTICS_PATH,
-      AUTOSCALING_SUGGESTIONS_PATH)));
+      METRICS_PATH);
   String APISPEC_LOCATION = "apispec/";
   String INTROSPECT = "/_introspect";
 
@@ -234,7 +241,7 @@ public interface CommonParams {
       }
       return null;
     }
-  };
+  }
 
   /** which parameters to log (if not supplied all parameters will be logged) **/
   String LOG_PARAMS_LIST = "logParamsList";
@@ -263,20 +270,25 @@ public interface CommonParams {
   String COST = "cost";
 
   /**
-   * Request ID parameter added to the request when using debug=track
+   * Request ID parameter added to all distributed queries (that do not opt out)
+   *
+   * @see #DISABLE_REQUEST_ID
    */
   String REQUEST_ID = "rid";
+
+  /**
+   * An opt-out flag to prevent the addition of {@link #REQUEST_ID} tracing on distributed queries
+   *
+   * Defaults to 'false' if not specified.
+   *
+   * @see #REQUEST_ID
+   */
+  String DISABLE_REQUEST_ID = "disableRequestId";
 
   /**
    * Request Purpose parameter added to each internal shard request when using debug=track
    */
   String REQUEST_PURPOSE = "requestPurpose";
-
-  /**
-   * When querying a node, prefer local node's cores for distributed queries.
-   * @deprecated Use {@code ShardParams.SHARDS_PREFERENCE}
-   */
-  String PREFER_LOCAL_SHARDS = "preferLocalShards";
 
   String JAVABIN = "javabin";
 
@@ -287,6 +299,10 @@ public interface CommonParams {
   String NAME = "name";
   String VALUE_LONG = "val";
 
+  String SOLR_REQUEST_CONTEXT_PARAM = "Solr-Request-Context";
+
+  String SOLR_REQUEST_TYPE_PARAM = "Solr-Request-Type";
+
   String VERSION_FIELD="_version_";
 
   String FAIL_ON_VERSION_CONFLICTS ="failOnVersionConflicts";
@@ -295,6 +311,11 @@ public interface CommonParams {
   String JSON_MIME = "application/json";
 
   String JAVABIN_MIME = "application/javabin";
+
+  String FILE = "file";
+  String FILES = "files";
+
+  String CHILDDOC = "_childDocuments_";
 
 }
 
