@@ -23,11 +23,14 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.Reader;
 import java.io.StringReader;
-import java.io.UnsupportedEncodingException;
 import java.io.Writer;
+import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
+import java.lang.reflect.Field;
+import java.lang.reflect.Modifier;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.BufferOverflowException;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.util.AbstractMap;
@@ -35,27 +38,33 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.concurrent.Callable;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.apache.http.HttpEntity;
+import org.apache.http.HttpResponse;
+import org.apache.http.client.HttpClient;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.client.methods.HttpRequestBase;
 import org.apache.http.util.EntityUtils;
 import org.apache.solr.client.solrj.cloud.DistribStateManager;
-import org.apache.solr.client.solrj.cloud.autoscaling.VersionedData;
+import org.apache.solr.client.solrj.cloud.VersionedData;
 import org.apache.solr.client.solrj.impl.BinaryRequestWriter;
 import org.apache.solr.common.IteratorWriter;
 import org.apache.solr.common.LinkedHashMapWriter;
@@ -63,6 +72,7 @@ import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.MapWriterMap;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SpecProvider;
+import org.apache.solr.common.annotation.JsonProperty;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.cloud.ZkOperation;
 import org.apache.solr.common.cloud.ZkStateReader;
@@ -79,54 +89,52 @@ import org.slf4j.MDC;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Collections.singletonList;
-import static java.util.Collections.unmodifiableList;
-import static java.util.Collections.unmodifiableSet;
 import static java.util.concurrent.TimeUnit.NANOSECONDS;
 
+
 public class Utils {
-  public static final Function NEW_HASHMAP_FUN = o -> new HashMap<>();
-  public static final Function NEW_LINKED_HASHMAP_FUN = o -> new LinkedHashMap<>();
-  public static final Function NEW_ATOMICLONG_FUN = o -> new AtomicLong();
-  public static final Function NEW_ARRAYLIST_FUN = o -> new ArrayList<>();
-  public static final Function NEW_SYNCHRONIZED_ARRAYLIST_FUN = o -> Collections.synchronizedList(new ArrayList<>());
-  public static final Function NEW_HASHSET_FUN = o -> new HashSet<>();
+
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
-  
-  public static Map getDeepCopy(Map map, int maxDepth) {
+
+  @SuppressWarnings({"rawtypes"})
+  public static Map getDeepCopy(Map<?,?> map, int maxDepth) {
     return getDeepCopy(map, maxDepth, true, false);
   }
 
-  public static Map getDeepCopy(Map map, int maxDepth, boolean mutable) {
+  @SuppressWarnings({"rawtypes"})
+  public static Map getDeepCopy(Map<?,?> map, int maxDepth, boolean mutable) {
     return getDeepCopy(map, maxDepth, mutable, false);
   }
 
-  public static Map getDeepCopy(Map map, int maxDepth, boolean mutable, boolean sorted) {
-    if(map == null) return null;
+  @SuppressWarnings({"unchecked", "rawtypes"})
+  public static Map getDeepCopy(Map<?,?> map, int maxDepth, boolean mutable, boolean sorted) {
+    if (map == null) return null;
     if (maxDepth < 1) return map;
     Map copy;
     if (sorted) {
-      copy = new TreeMap();
+      copy = new TreeMap<>();
     } else {
-      copy = map instanceof LinkedHashMap?  new LinkedHashMap(map.size()): new HashMap(map.size());
+      copy = map instanceof LinkedHashMap ? new LinkedHashMap<>(map.size()) : new HashMap<>(map.size());
     }
     for (Object o : map.entrySet()) {
-      Map.Entry e = (Map.Entry) o;
-      copy.put(e.getKey(), makeDeepCopy(e.getValue(),maxDepth, mutable, sorted));
+      Map.Entry<?,?> e = (Map.Entry<?,?>) o;
+      copy.put(e.getKey(), makeDeepCopy(e.getValue(), maxDepth, mutable, sorted));
     }
     return mutable ? copy : Collections.unmodifiableMap(copy);
   }
 
-  public static void forEachMapEntry(Object o, String path, BiConsumer fun) {
+  public static void forEachMapEntry(Object o, String path, @SuppressWarnings({"rawtypes"})BiConsumer fun) {
     Object val = Utils.getObjectByPath(o, false, path);
     forEachMapEntry(val, fun);
   }
 
-  public static void forEachMapEntry(Object o, List<String> path, BiConsumer fun) {
+  public static void forEachMapEntry(Object o, List<String> path, @SuppressWarnings({"rawtypes"})BiConsumer fun) {
     Object val = Utils.getObjectByPath(o, false, path);
     forEachMapEntry(val, fun);
   }
 
-  public static void forEachMapEntry(Object o, BiConsumer fun) {
+  @SuppressWarnings({"unchecked"})
+  public static void forEachMapEntry(Object o, @SuppressWarnings({"rawtypes"})BiConsumer fun) {
     if (o instanceof MapWriter) {
       MapWriter m = (MapWriter) o;
       try {
@@ -149,16 +157,17 @@ public class Utils {
     if (v instanceof MapWriter && maxDepth > 1) {
       v = ((MapWriter) v).toMap(new LinkedHashMap<>());
     } else if (v instanceof IteratorWriter && maxDepth > 1) {
-      v = ((IteratorWriter) v).toList(new ArrayList<>());
+      List<Object> l = ((IteratorWriter) v).toList(new ArrayList<>());
       if (sorted) {
-        Collections.sort((List)v);
+        l.sort(null);
       }
+      v = l;
     }
 
     if (v instanceof Map) {
       v = getDeepCopy((Map) v, maxDepth - 1, mutable, sorted);
     } else if (v instanceof Collection) {
-      v = getDeepCopy((Collection) v, maxDepth - 1, mutable, sorted);
+      v = getDeepCopy((Collection<?>) v, maxDepth - 1, mutable, sorted);
     }
     return v;
   }
@@ -166,24 +175,30 @@ public class Utils {
   public static InputStream toJavabin(Object o) throws IOException {
     try (final JavaBinCodec jbc = new JavaBinCodec()) {
       BinaryRequestWriter.BAOS baos = new BinaryRequestWriter.BAOS();
-      jbc.marshal(o,baos);
-      return new ByteBufferInputStream(ByteBuffer.wrap(baos.getbuf(),0,baos.size()));
+      jbc.marshal(o, baos);
+      return new ByteBufferInputStream(ByteBuffer.wrap(baos.getbuf(), 0, baos.size()));
+    }
+  }
+  
+  public static Object fromJavabin(byte[] bytes) throws IOException {
+    try (JavaBinCodec jbc = new JavaBinCodec()) {
+      return jbc.unmarshal(bytes);
     }
   }
 
-  public static Collection getDeepCopy(Collection c, int maxDepth, boolean mutable) {
+  public static Collection<?> getDeepCopy(Collection<?> c, int maxDepth, boolean mutable) {
     return getDeepCopy(c, maxDepth, mutable, false);
   }
 
-  public static Collection getDeepCopy(Collection c, int maxDepth, boolean mutable, boolean sorted) {
+  public static Collection<?> getDeepCopy(Collection<?> c, int maxDepth, boolean mutable, boolean sorted) {
     if (c == null || maxDepth < 1) return c;
-    Collection result = c instanceof Set ?
-        ( sorted? new TreeSet() : new HashSet()) : new ArrayList();
-    for (Object o : c) result.add(makeDeepCopy(o, maxDepth, mutable, sorted));
+    Collection<Object> result = c instanceof Set ?
+        (sorted ? new TreeSet<>() : new HashSet<>()) : new ArrayList<>();
+    for (Object o : c) result.add(makeDeepCopy(o, maxDepth, mutable, sorted)); // TODO should this be maxDepth - 1?
     if (sorted && (result instanceof List)) {
-      Collections.sort((List)result);
+      ((List<Object>) result).sort(null);
     }
-    return mutable ? result : result instanceof Set ? unmodifiableSet((Set) result) : unmodifiableList((List) result);
+    return mutable ? result : Collections.unmodifiableCollection(result);
   }
 
   public static void writeJson(Object o, OutputStream os, boolean indent) throws IOException {
@@ -192,10 +207,10 @@ public class Utils {
   }
 
   public static Writer writeJson(Object o, Writer writer, boolean indent) throws IOException {
-    new SolrJSONWriter(writer)
-        .setIndent(indent)
-        .writeObj(o)
-        .close();
+    try (SolrJSONWriter jsonWriter = new SolrJSONWriter(writer)) {
+      jsonWriter.setIndent(indent)
+      .writeObj(o);
+    }
     return writer;
   }
 
@@ -207,9 +222,49 @@ public class Utils {
 
     @Override
     public void handleUnknownClass(Object o) {
+      // avoid materializing MapWriter / IteratorWriter to Map / List
+      // instead serialize them directly
       if (o instanceof MapWriter) {
-        Map m = ((MapWriter)o).toMap(new LinkedHashMap<>());
-        write(m);
+        MapWriter mapWriter = (MapWriter) o;
+        startObject();
+        final boolean[] first = new boolean[1];
+        first[0] = true;
+        int sz = mapWriter._size();
+        mapWriter._forEachEntry((k, v) -> {
+          if (first[0]) {
+            first[0] = false;
+          } else {
+            writeValueSeparator();
+          }
+          if (sz > 1) indent();
+          writeString(k.toString());
+          writeNameSeparator();
+          write(v);
+        });
+        endObject();
+      } else if (o instanceof IteratorWriter) {
+        IteratorWriter iteratorWriter = (IteratorWriter) o;
+        startArray();
+        final boolean[] first = new boolean[1];
+        first[0] = true;
+        try {
+          iteratorWriter.writeIter(new IteratorWriter.ItemWriter() {
+            @Override
+            public IteratorWriter.ItemWriter add(Object o) throws IOException {
+              if (first[0]) {
+                first[0] = false;
+              } else {
+                writeValueSeparator();
+              }
+              indent();
+              write(o);
+              return this;
+            }
+          });
+        } catch (IOException e) {
+          throw new RuntimeException("this should never happen", e);
+        }
+        endArray();
       } else {
         super.handleUnknownClass(o);
       }
@@ -217,15 +272,15 @@ public class Utils {
   }
 
   public static byte[] toJSON(Object o) {
-    if(o == null) return new byte[0];
+    if (o == null) return new byte[0];
     CharArr out = new CharArr();
-    if (!(o instanceof List) && !(o instanceof Map)) {
-      if (o instanceof MapWriter)  {
-        o = ((MapWriter)o).toMap(new LinkedHashMap<>());
-      } else if(o instanceof IteratorWriter){
-        o = ((IteratorWriter)o).toList(new ArrayList<>());
-      }
-    }
+//    if (!(o instanceof List) && !(o instanceof Map)) {
+//      if (o instanceof MapWriter) {
+//        o = ((MapWriter) o).toMap(new LinkedHashMap<>());
+//      } else if (o instanceof IteratorWriter) {
+//        o = ((IteratorWriter) o).toList(new ArrayList<>());
+//      }
+//    }
     new MapWriterJSONWriter(out, 2).write(o); // indentation by default
     return toUTF8(out);
   }
@@ -241,50 +296,63 @@ public class Utils {
   }
 
   public static Object fromJSON(byte[] utf8) {
+    return fromJSON(utf8, 0, utf8.length);
+  }
+  
+  public static Object fromJSON(byte[] utf8, int offset, int length) {
     // convert directly from bytes to chars
     // and parse directly from that instead of going through
     // intermediate strings or readers
     CharArr chars = new CharArr();
-    ByteUtils.UTF8toUTF16(utf8, 0, utf8.length, chars);
+    ByteUtils.UTF8toUTF16(utf8, offset, length, chars);
     JSONParser parser = new JSONParser(chars.getArray(), chars.getStart(), chars.length());
     parser.setFlags(parser.getFlags() |
         JSONParser.ALLOW_MISSING_COLON_COMMA_BEFORE_OBJECT |
         JSONParser.OPTIONAL_OUTER_BRACES);
     try {
-      return STANDARDOBJBUILDER.apply(parser).getVal(parser);
+      return STANDARDOBJBUILDER.apply(parser).getValStrict();
     } catch (IOException e) {
       throw new RuntimeException(e); // should never happen w/o using real IO
     }
   }
 
-  public static Map<String, Object> makeMap(Object... keyVals) {
-    return makeMap(false, keyVals);
+  public static <V> Map<String, V> makeMap(String k1, V v1, String k2, V v2) {
+    Map<String, V> map = new LinkedHashMap<>(2, 1);
+    map.put(k1, v1);
+    map.put(k2, v2);
+    return map;
   }
 
-  public static Map<String, Object> makeMap(boolean skipNulls, Object... keyVals) {
+  public static Map<String, Object> makeMap(Object... keyVals) {
+    return _makeMap(keyVals);
+  }
+
+  public static Map<String, String> makeMap(String... keyVals) {
+    return _makeMap(keyVals);
+  }
+
+  private static <T> Map<String, T> _makeMap(T[] keyVals) {
     if ((keyVals.length & 0x01) != 0) {
       throw new IllegalArgumentException("arguments should be key,value");
     }
-    Map<String, Object> propMap = new LinkedHashMap<>(keyVals.length >> 1);
+    Map<String, T> propMap = new LinkedHashMap<>(); // Cost of oversizing LHM is low, don't compute initialCapacity
     for (int i = 0; i < keyVals.length; i += 2) {
-      Object keyVal = keyVals[i + 1];
-      if (skipNulls && keyVal == null) continue;
-      propMap.put(keyVals[i].toString(), keyVal);
+      propMap.put(String.valueOf(keyVals[i]), keyVals[i + 1]);
     }
     return propMap;
   }
 
-  public static Object fromJSON(InputStream is){
+  public static Object fromJSON(InputStream is) {
     return fromJSON(new InputStreamReader(is, UTF_8));
   }
-  public static Object fromJSON(Reader is){
+
+  public static Object fromJSON(Reader is) {
     try {
-      return STANDARDOBJBUILDER.apply(getJSONParser(is)).getVal();
+      return STANDARDOBJBUILDER.apply(getJSONParser(is)).getValStrict();
     } catch (IOException e) {
       throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, "Parse error", e);
     }
   }
-
 
   public static final Function<JSONParser, ObjectBuilder> STANDARDOBJBUILDER = jsonParser -> {
     try {
@@ -295,10 +363,10 @@ public class Utils {
   };
   public static final Function<JSONParser, ObjectBuilder> MAPWRITEROBJBUILDER = jsonParser -> {
     try {
-      return new ObjectBuilder(jsonParser){
+      return new ObjectBuilder(jsonParser) {
         @Override
         public Object newObject() {
-          return new LinkedHashMapWriter();
+          return new LinkedHashMapWriter<>();
         }
       };
     } catch (IOException e) {
@@ -308,10 +376,10 @@ public class Utils {
 
   public static final Function<JSONParser, ObjectBuilder> MAPOBJBUILDER = jsonParser -> {
     try {
-      return new ObjectBuilder(jsonParser){
+      return new ObjectBuilder(jsonParser) {
         @Override
         public Object newObject() {
-          return new HashMap();
+          return new HashMap<>();
         }
       };
     } catch (IOException e) {
@@ -319,9 +387,16 @@ public class Utils {
     }
   };
 
+  /**
+   * Util function to convert {@link Object} to {@link String}
+   * Specially handles {@link Date} to string conversion
+   */
+  public static final Function<Object, String> OBJECT_TO_STRING =
+      obj -> ((obj instanceof Date) ? Objects.toString(((Date) obj).toInstant()) : Objects.toString(obj));
+
   public static Object fromJSON(InputStream is, Function<JSONParser, ObjectBuilder> objBuilderProvider) {
     try {
-      return objBuilderProvider.apply(getJSONParser((new InputStreamReader(is, StandardCharsets.UTF_8)))).getVal();
+      return objBuilderProvider.apply(getJSONParser((new InputStreamReader(is, StandardCharsets.UTF_8)))).getValStrict();
     } catch (IOException e) {
       throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, "Parse error", e);
     }
@@ -336,10 +411,11 @@ public class Utils {
       return fromJSON(stream);
     } catch (IOException e) {
       throw new SolrException(SolrException.ErrorCode.SERVER_ERROR,
-                              "Resource error: " + e.getMessage(), e);
+          "Resource error: " + e.getMessage(), e);
     }
   }
-  public static JSONParser getJSONParser(Reader reader){
+
+  public static JSONParser getJSONParser(Reader reader) {
     JSONParser parser = new JSONParser(reader);
     parser.setFlags(parser.getFlags() |
         JSONParser.ALLOW_MISSING_COLON_COMMA_BEFORE_OBJECT |
@@ -347,11 +423,11 @@ public class Utils {
     return parser;
   }
 
-  public static Object fromJSONString(String json)  {
+  public static Object fromJSONString(String json) {
     try {
-      return STANDARDOBJBUILDER.apply(getJSONParser(new StringReader(json))).getVal();
+      return STANDARDOBJBUILDER.apply(getJSONParser(new StringReader(json))).getValStrict();
     } catch (Exception e) {
-      throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, "Parse error : "+ json, e );
+      throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, "Parse error : " + json, e);
     }
   }
 
@@ -384,7 +460,7 @@ public class Utils {
         Object o = getVal(obj, s, -1);
         if (o == null) return false;
         if (idx > -1) {
-          List l = (List) o;
+          List<?> l = (List<?>) o;
           o = idx < l.size() ? l.get(idx) : null;
         }
         if (!isMapLike(o)) return false;
@@ -392,18 +468,22 @@ public class Utils {
       } else {
         if (idx == -2) {
           if (obj instanceof NamedList) {
-            NamedList namedList = (NamedList) obj;
+            @SuppressWarnings("unchecked")
+            NamedList<Object> namedList = (NamedList<Object>) obj;
             int location = namedList.indexOf(s, 0);
             if (location == -1) namedList.add(s, value);
             else namedList.setVal(location, value);
           } else if (obj instanceof Map) {
-            ((Map) obj).put(s, value);
+            @SuppressWarnings("unchecked")
+            Map<String, Object> map = ((Map<String, Object>) obj);
+            map.put(s, value);
           }
           return true;
         } else {
           Object v = getVal(obj, s, -1);
           if (v instanceof List) {
-            List list = (List) v;
+            @SuppressWarnings("unchecked")
+            List<Object> list = (List<Object>) v;
             if (idx == -1) {
               list.add(value);
             } else {
@@ -424,8 +504,8 @@ public class Utils {
 
 
   public static Object getObjectByPath(Object root, boolean onlyPrimitive, List<String> hierarchy) {
-    if(root == null) return null;
-    if(!isMapLike(root)) return null;
+    if (root == null) return null;
+    if (!isMapLike(root)) return null;
     Object obj = root;
     for (int i = 0; i < hierarchy.size(); i++) {
       int idx = -1;
@@ -444,9 +524,11 @@ public class Utils {
           if (o instanceof MapWriter) {
             o = getVal(o, null, idx);
           } else if (o instanceof Map) {
-            o = getVal(new MapWriterMap((Map) o), null, idx);
+            @SuppressWarnings("unchecked")
+            Map<String, Object> map = (Map<String, Object>) o;
+            o = getVal(new MapWriterMap(map), null, idx);
           } else {
-            List l = (List) o;
+            List<?> l = (List<?>) o;
             o = idx < l.size() ? l.get(idx) : null;
           }
         }
@@ -459,7 +541,7 @@ public class Utils {
           if (val instanceof IteratorWriter) {
             val = getValueAt((IteratorWriter) val, idx);
           } else {
-            List l = (List) val;
+            List<?> l = (List<?>) val;
             val = idx < l.size() ? l.get(idx) : null;
           }
         }
@@ -518,13 +600,14 @@ public class Utils {
       try {
         ((MapWriter) obj).writeMap(new MapWriter.EntryWriter() {
           int count = -1;
+
           @Override
           public MapWriter.EntryWriter put(CharSequence k, Object v) {
             if (result[0] != null) return this;
             if (idx < 0) {
               if (k.equals(key)) result[0] = v;
             } else {
-              if (++count == idx) result[0] = new MapWriterEntry(k, v);
+              if (++count == idx) result[0] = new MapWriterEntry<>(k, v);
             }
             return this;
           }
@@ -533,15 +616,14 @@ public class Utils {
         throw new RuntimeException(e);
       }
       return result[0];
-    }
-    else if (obj instanceof Map) return ((Map) obj).get(key);
+    } else if (obj instanceof Map) return ((Map<?,?>) obj).get(key);
     else throw new RuntimeException("must be a NamedList or Map");
   }
 
   /**
    * If the passed entity has content, make sure it is fully
    * read and closed.
-   * 
+   *
    * @param entity to consume or null
    */
   public static void consumeFully(HttpEntity entity) {
@@ -562,15 +644,17 @@ public class Utils {
 
   /**
    * Make sure the InputStream is fully read.
-   * 
+   *
    * @param is to read
    * @throws IOException on problem with IO
    */
-  private static void readFully(InputStream is) throws IOException {
+  public static void readFully(InputStream is) throws IOException {
     is.skip(is.available());
-    while (is.read() != -1) {}
+    while (is.read() != -1) {
+    }
   }
 
+  @SuppressWarnings({"unchecked"})
   public static Map<String, Object> getJson(DistribStateManager distribStateManager, String path) throws InterruptedException, IOException, KeeperException {
     VersionedData data = null;
     try {
@@ -585,11 +669,12 @@ public class Utils {
   /**
    * Assumes data in ZooKeeper is a JSON string, deserializes it and returns as a Map
    *
-   * @param zkClient the zookeeper client
-   * @param path the path to the znode being read
+   * @param zkClient        the zookeeper client
+   * @param path            the path to the znode being read
    * @param retryOnConnLoss whether to retry the operation automatically on connection loss, see {@link org.apache.solr.common.cloud.ZkCmdExecutor#retryOperation(ZkOperation)}
    * @return a Map if the node exists and contains valid JSON or an empty map if znode does not exist or has a null data
    */
+  @SuppressWarnings({"unchecked"})
   public static Map<String, Object> getJson(SolrZkClient zkClient, String path, boolean retryOnConnLoss) throws KeeperException, InterruptedException {
     try {
       byte[] bytes = zkClient.getData(path, null, null, retryOnConnLoss);
@@ -630,15 +715,16 @@ public class Utils {
     }
   }
 
-  /**Applies one json over other. The 'input' is applied over the sink
+  /**
+   * Applies one json over other. The 'input' is applied over the sink
    * The values in input isapplied over the values in 'sink' . If a value is 'null'
    * that value is removed from sink
    *
-   * @param sink the original json object to start with. Ensure that this Map is mutable
+   * @param sink  the original json object to start with. Ensure that this Map is mutable
    * @param input the json with new values
    * @return whether there was any change made to sink or not.
    */
-
+  @SuppressWarnings({"unchecked"})
   public static boolean mergeJson(Map<String, Object> sink, Map<String, Object> input) {
     boolean isModified = false;
     for (Map.Entry<String, Object> e : input.entrySet()) {
@@ -673,17 +759,21 @@ public class Utils {
   }
 
   public static String getBaseUrlForNodeName(final String nodeName, String urlScheme) {
-    final int _offset = nodeName.indexOf("_");
+    return getBaseUrlForNodeName(nodeName, urlScheme, false);
+  }
+  public static String getBaseUrlForNodeName(final String nodeName, String urlScheme,  boolean isV2) {
+    final int colonAt = nodeName.indexOf(':');
+    if (colonAt == -1) {
+      throw new IllegalArgumentException("nodeName does not contain expected ':' separator: " + nodeName);
+    }
+
+    final int _offset = nodeName.indexOf("_", colonAt);
     if (_offset < 0) {
       throw new IllegalArgumentException("nodeName does not contain expected '_' separator: " + nodeName);
     }
-    final String hostAndPort = nodeName.substring(0,_offset);
-    try {
-      final String path = URLDecoder.decode(nodeName.substring(1+_offset), "UTF-8");
-      return urlScheme + "://" + hostAndPort + (path.isEmpty() ? "" : ("/" + path));
-    } catch (UnsupportedEncodingException e) {
-      throw new IllegalStateException("JVM Does not seem to support UTF-8", e);
-    }
+    final String hostAndPort = nodeName.substring(0, _offset);
+    final String path = URLDecoder.decode(nodeName.substring(1 + _offset), UTF_8);
+    return urlScheme + "://" + hostAndPort + (path.isEmpty() ? "" : ("/" + (isV2? "api": path)));
   }
 
   public static long time(TimeSource timeSource, TimeUnit unit) {
@@ -711,6 +801,144 @@ public class Utils {
       logger.error(e.getMessage(), e);
     }
     return def;
+  }
+
+  public interface InputStreamConsumer<T> {
+
+    T accept(InputStream is) throws IOException;
+
+  }
+
+  public static final InputStreamConsumer<?> JAVABINCONSUMER = is -> new JavaBinCodec().unmarshal(is);
+  public static final InputStreamConsumer<?> JSONCONSUMER = Utils::fromJSON;
+
+  public static InputStreamConsumer<ByteBuffer> newBytesConsumer(int maxSize) {
+    return is -> {
+      try (BinaryRequestWriter.BAOS bos = new BinaryRequestWriter.BAOS()) {
+        long sz = 0;
+        int next = is.read();
+        while (next > -1) {
+          if (++sz > maxSize) throw new BufferOverflowException();
+          bos.write(next);
+          next = is.read();
+        }
+        bos.flush();
+        return ByteBuffer.wrap(bos.getbuf(), 0, bos.size());
+      } catch (IOException e) {
+        throw new RuntimeException(e);
+      }
+    };
+
+  }
+
+
+  public static <T> T executeGET(HttpClient client, String url, InputStreamConsumer<T> consumer) throws SolrException {
+    return executeHttpMethod(client, url, consumer, new HttpGet(url));
+  }
+
+  public static <T> T executeHttpMethod(HttpClient client, String url, InputStreamConsumer<T> consumer, HttpRequestBase httpMethod) {
+    T result = null;
+    HttpResponse rsp = null;
+    try {
+      rsp = client.execute(httpMethod);
+    } catch (IOException e) {
+      log.error("Error in request to url : {}", url, e);
+      throw new SolrException(SolrException.ErrorCode.UNKNOWN, "Error sending request");
+    }
+    int statusCode = rsp.getStatusLine().getStatusCode();
+    if (statusCode != 200) {
+      try {
+        log.error("Failed a request to: {}, status: {}, body: {}", url, rsp.getStatusLine(), EntityUtils.toString(rsp.getEntity(), StandardCharsets.UTF_8)); // nowarn
+      } catch (IOException e) {
+        log.error("could not print error", e);
+      }
+      throw new SolrException(SolrException.ErrorCode.getErrorCode(statusCode), "Unknown error");
+    }
+    HttpEntity entity = rsp.getEntity();
+    try {
+      InputStream is = entity.getContent();
+      if (consumer != null) {
+
+        result = consumer.accept(is);
+      }
+    } catch (IOException e) {
+      throw new SolrException(SolrException.ErrorCode.UNKNOWN, e);
+    } finally {
+      Utils.consumeFully(entity);
+    }
+    return result;
+  }
+
+  public static void reflectWrite(MapWriter.EntryWriter ew, Object o) throws IOException{
+    List<FieldWriter> fieldWriters = null;
+    try {
+      fieldWriters = getReflectData(o.getClass());
+    } catch (IllegalAccessException e) {
+      throw new RuntimeException(e);
+    }
+    for (FieldWriter fieldWriter : fieldWriters) {
+      try {
+        fieldWriter.write(ew, o);
+      } catch( Throwable e) {
+        throw new RuntimeException(e);
+        //should not happen
+      }
+    }
+  }
+
+  private static List<FieldWriter> getReflectData(Class<?> c) throws IllegalAccessException {
+    boolean sameClassLoader = c.getClassLoader() == Utils.class.getClassLoader();
+    //we should not cache the class references of objects loaded from packages because they will not get garbage collected
+    //TODO fix that later
+    List<FieldWriter> reflectData = sameClassLoader ? storedReflectData.get(c): null;
+    if(reflectData == null) {
+      ArrayList<FieldWriter> l = new ArrayList<>();
+      MethodHandles.Lookup lookup = MethodHandles.publicLookup();
+      for (Field field : lookup.accessClass(c).getFields()) {
+        JsonProperty prop = field.getAnnotation(JsonProperty.class);
+        if (prop == null) continue;
+        int modifiers = field.getModifiers();
+        if (Modifier.isPublic(modifiers) && !Modifier.isStatic(modifiers)) {
+          String fname = prop.value().isEmpty() ? field.getName() : prop.value();
+          try {
+            if (field.getType() == int.class) {
+              MethodHandle mh = lookup.findGetter(c, field.getName(), int.class);
+              l.add((ew, inst) -> ew.put(fname, (int) mh.invoke(inst)));
+            } else if (field.getType() == long.class) {
+              MethodHandle mh = lookup.findGetter(c, field.getName(), long.class);
+              l.add((ew, inst) -> ew.put(fname, (long) mh.invoke(inst)));
+            } else if (field.getType() == boolean.class) {
+              MethodHandle mh = lookup.findGetter(c, field.getName(), boolean.class);
+              l.add((ew, inst) -> ew.put(fname, (boolean) mh.invoke(inst)));
+            } else if (field.getType() == double.class) {
+              MethodHandle mh = lookup.findGetter(c, field.getName(), double.class);
+              l.add((ew, inst) -> ew.put(fname, (double) mh.invoke(inst)));
+            } else if (field.getType() == float.class) {
+              MethodHandle mh = lookup.findGetter(c, field.getName(), float.class);
+              l.add((ew, inst) -> ew.put(fname, (float) mh.invoke(inst)));
+            } else {
+              MethodHandle mh = lookup.findGetter(c, field.getName(), field.getType());
+              l.add((ew, inst) -> ew.putIfNotNull(fname, mh.invoke(inst)));
+            }
+          } catch (NoSuchFieldException e) {
+            //this is unlikely
+            throw new RuntimeException(e);
+          }
+        }}
+
+      if(sameClassLoader){
+        storedReflectData.put(c, reflectData = Collections.unmodifiableList(new ArrayList<>(l)));
+      }
+    }
+    return reflectData;
+  }
+
+
+
+  private static Map<Class<?>, List<FieldWriter>> storedReflectData = new ConcurrentHashMap<>();
+
+  interface FieldWriter {
+    void write(MapWriter.EntryWriter ew, Object inst) throws Throwable;
   }
 
 }
